Rename to route

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name" : "chix-flow",
-  "version" : "0.0.1",
+  "name" : "chix-route",
+  "version" : "0.0.2",
   "user" : "Rob Halff",
   "domain": "robberthalff.com",
-  "description": "Chiχ flow",
-  "main": "flow",
+  "description": "Chiχ route",
+  "main": "route",
   "keywords": [
-    "flow"
+    "flow",
+    "route"
   ],
   "maintainers": [
     {
